History: Fix favicon and title alignment caused by flexbox changes.
BUG=225675


Review URL: https://chromiumcodereview.appspot.com/13465004

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@191906 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 098c70ebb459f8b0c9f3721ec0d06abeb7a1607a

--- a/chrome/browser/resources/history/history.css
+++ b/chrome/browser/resources/history/history.css
@@ -212,6 +212,7 @@ h2.timeframe {
 
 .entry .domain {
   color: rgb(151, 156, 160);
+  min-width: -webkit-min-content;
   overflow: hidden;
   padding-left: 6px;
   padding-right: 6px;
@@ -251,6 +252,7 @@ html[dir='rtl'] .site-domain {
 
 .entry .time {
   color: rgb(151, 156, 160);
+  min-width: 90px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
